# gendiff

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  generate_diff.py  get_diff.py  parser.py
gendiff/formatters/: choose_formatter.py  json_formatter.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/modules/: choose_formatter.py  diff.py  gendiff_func.py  generate_diff.py  parse_files.py  parse_func.py  stringify_func.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file3.json  result1.txt  result2.txt  result_flat_json.txt  result_nested_json.txt
