[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = ["Ulyana Krasilnikova <b-lack-u@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/illata1998/python-project-50.git"
classifiers = [
    "Topic :: File Formats :: JSON",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10"
]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"
pyyaml = "^6.0.1"


[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
